Finalização da versão MVP

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,17 @@ Email.email=O Email é inválido
 Size.email= O Email deve conter no mínimo {2} e no máximo {1} caracteres
 NotBlank.telefone=O Telefone é obrigatório
 Size.telefone= O Telefone deve conter no mínimo {2} e no máximo {1} caracteres
+NotNull.entrega.cliente.id= O cliente é obrigatório
+NotNull.entrega.cliente= O cliente é obrigatório
+NotBlank.entrega.destinatario.nome= O Nome do destinatario é obrigatório
+Size.entrega.destinatario.nome= O Nome do destinatário deve conter no mínimo {2} e no máximo {1} caracteres
+NotBlank.entrega.destinatario.logradouro= O Logradouro é obrigatório
+Size.entrega.destinatario.logradouro= O Logradouro deve conter no mínimo {2} e no máximo {1} caracteres
+NotBlank.entrega.destinatario.numero= O Número é obrigatório
+Size.entrega.destinatario.numero= O Número deve conter no mínimo {2} e no máximo {1} caracteres
+NotBlank.entrega.destinatario.bairro= O Bairro é obrigatório
+Size.entrega.destinatario.bairro= O Bairro deve conter no mínimo {2} e no máximo {1} caracteres
+NotBlank.entrega.destinatario.complemento= O Complemento do destinatario é obrigatório
+Size.entrega.destinatario.complemento= O Complemento deve conter no mínimo {2} e no máximo {1} caracteres
+NotBlank.descricao=A Descrição não pode ser vazio ou nulo
+
